--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -22,6 +22,9 @@ jobs:
 
 
       # 3️⃣ application.properties 생성 (GitHub Secrets 사용)
+      - name: Create resources directory
+        run: mkdir -p Server/src/main/resources
+
       - name: Create application.properties
         run: |
           cat <<EOF > Server/src/main/resources/application.properties
