--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -24,20 +24,16 @@ jobs:
       - name: Create application.properties
         run: |
           mkdir -p src/main/resources
-          cat <<EOF > src/main/resources/application.properties
-          spring.application.name=team4
+          echo "spring.application.name=team4" >> src/main/resources/application.properties
+          echo "spring.datasource.url=${{ secrets.RDS_URL }}" >> src/main/resources/application.properties
+          echo "spring.datasource.username=${{ secrets.RDS_USERNAME }}" >> src/main/resources/application.properties
+          echo "spring.datasource.password=${{ secrets.RDS_PASSWORD }}" >> src/main/resources/application.properties
+          echo "spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver" >> src/main/resources/application.properties
+          echo "spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect" >> src/main/resources/application.properties
+          echo "spring.jpa.hibernate.ddl-auto=update" >> src/main/resources/application.properties
+          echo "spring.jpa.show-sql=true" >> src/main/resources/application.properties
+          echo "spring.jpa.properties.hibernate.format_sql=true" >> src/main/resources/application.properties
 
-          # DB
-          spring.datasource.url=${{ secrets.RDS_URL }}
-          spring.datasource.username=${{ secrets.RDS_USERNAME }}
-          spring.datasource.password=${{ secrets.RDS_PASSWORD }}
-          spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-          # JPA
-          spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-          spring.jpa.hibernate.ddl-auto=update
-          spring.jpa.show-sql=true
-          spring.jpa.properties.hibernate.format_sql=true
           EOF
 
       # 4️⃣ Gradle 빌드
