✨ Feat: 프로젝트 전체 조회 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=team4
   
-  # ✅ 데이터베이스 연결
+  # â ë°ì´í°ë² ì´ì¤ ì°ê²°
 spring.datasource.url= ${RDS_URL}
 spring.datasource.username= ${RDS_USERNAME}
 spring.datasource.password= ${RDS_PASSWORD}
   
-  # ✅ JPA 설정
+  # â JPA ì¤ì 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
