--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2️⃣ JDK 17 설치
+      # 2️⃣ JDK 설정
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -24,7 +24,7 @@ jobs:
       - name: Create application.properties
         run: |
           mkdir -p src/main/resources
-          echo "spring.application.name=team4" > src/main/resources/application.properties
+          echo "spring.application.name=team4" >> src/main/resources/application.properties
           echo "spring.datasource.url=${{ secrets.RDS_URL }}" >> src/main/resources/application.properties
           echo "spring.datasource.username=${{ secrets.RDS_USERNAME }}" >> src/main/resources/application.properties
           echo "spring.datasource.password=${{ secrets.RDS_PASSWORD }}" >> src/main/resources/application.properties
@@ -34,24 +34,25 @@ jobs:
           echo "spring.jpa.show-sql=true" >> src/main/resources/application.properties
           echo "spring.jpa.properties.hibernate.format_sql=true" >> src/main/resources/application.properties
 
-      # 4️⃣ gradlew 실행 권한 부여
+          EOF
+
+      # 4️⃣ Gradle 빌드
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
-      # 5️⃣ Gradle 빌드
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: build -x test
+          arguments: build
 
-      # 6️⃣ 빌드된 JAR 파일 업로드
+      # 5️⃣ 빌드된 JAR 파일 업로드
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: team4-Server
           path: build/libs/*.jar
 
-      # 7️⃣ 테스트 결과 업로드 (실패해도 계속 진행)
+      # 6️⃣ 테스트 결과 업로드 (실패해도 계속 진행)
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
         if: always()
@@ -64,37 +65,39 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 8️⃣ JAR 다운로드
+      # 7️⃣ 빌드된 JAR 파일 다운로드
       - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
           name: team4-Server
           path: build/libs/
 
-      # 9️⃣ EC2에 배포
+      # 8️⃣ EC2에 배포
       - name: Deploy to EC2
         env:
           EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
           EC2_USERNAME: ${{ secrets.EC2_USERNAME }}
           EC2_HOST: ${{ secrets.EC2_HOST }}
+
         run: |
           echo "$EC2_SSH_KEY" > team4.pem
           chmod 600 team4.pem
 
-          echo "🔗 SSH 접속 테스트"
+          echo "🔒 SSH 접속 테스트"
           ssh -i team4.pem -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_HOST "echo ✅ Connected"
-
+      
           jar_file=$(find build/libs -name '*.jar' ! -name '*plain.jar' | head -n 1)
-          echo "🚀 JAR 파일: $jar_file"
-
-          echo "📦 EC2로 파일 전송"
+          echo "📦 JAR 파일: $jar_file"
+      
+          echo "🚚 EC2로 전송"
           scp -i team4.pem -o StrictHostKeyChecking=no "$jar_file" $EC2_USERNAME@$EC2_HOST:/home/$EC2_USERNAME/team4-Server.jar
-
-          echo "🔄 서버 재시작"
+      
+          echo "🚀 서버 재시작"
           ssh -i team4.pem -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_HOST "
             pkill -f 'java -jar' || echo 'No process to kill'
             nohup java -jar /home/$EC2_USERNAME/team4-Server.jar > /home/$EC2_USERNAME/app.log 2>&1 &
             echo ✅ 배포 완료
           "
 
+          # SSH 키 삭제
           rm -f team4.pem
