--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -34,8 +34,6 @@ jobs:
           echo "spring.jpa.show-sql=true" >> src/main/resources/application.properties
           echo "spring.jpa.properties.hibernate.format_sql=true" >> src/main/resources/application.properties
 
-          EOF
-
       # 4️⃣ Gradle 빌드
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
@@ -54,8 +52,9 @@ jobs:
 
       # 6️⃣ 테스트 결과 업로드 (실패해도 계속 진행)
       - name: Upload Test Results
-        uses: actions/upload-artifact@v4
         if: always()
+        continue-on-error: true
+        uses: actions/upload-artifact@v4
         with:
           name: test-results
           path: build/reports/tests/test/
@@ -99,5 +98,4 @@ jobs:
             echo ✅ 배포 완료
           "
 
-          # SSH 키 삭제
           rm -f team4.pem
